--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -19,13 +19,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Check database
-      run: ls /app/config
+      run: ls 
       shell: bash
 
     - name: Check file 
-      run: cat /app/config/database.yml
+      run: cat database.yml
       shell: bash
-      
+
     - name: Set up Ruby
       uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
       with:
