--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -17,9 +17,31 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    
+    - name: Create database.yml
+      uses: DeveloperRic/action-create-env@v1.0.2
+      with:
+        full_text: |
+          default: &default
+            adapter: postgresql
+            encoding: unicode
+            pool: 5
+            host: ${{ ENV.DB_HOST }}
+            port: ${{ env.DB_PORT }}
+
+          development:
+            <<: *default
+            database: ${{ env.DB_NAME }}
+            username: ${{ secrets.DB_USERNAME }}
+            password: ${{ secrets.DB_PASSWORD }}
+        directory: ./config
 
     - name: Check database
       run: ls 
+      shell: bash
+
+    - name: Check database 2
+      run: ls config
       shell: bash
 
     - name: Check file 
