--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -48,8 +48,8 @@ jobs:
     # - name: Run tests
     #   run: bundle exec rake db:setup
 
-    - name: Start the server
-      run: rails s
+    # - name: Start the server
+    #   run: rails s
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v3
