--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,17 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name:  todo-deployment
+  name: todo-deployment
   namespace: default
   labels:
-    app:  todo-deployment-label
+    app: web
 
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: todo-deployment-label
-
-  replicas: 1
+      app: web
 
   strategy:
     rollingUpdate:
@@ -23,43 +22,15 @@ spec:
   template:
     metadata:
       labels:
-        app: todo-deployment-label
-
-  spec:
-      containers:
-      - name:  todo-container
-        image:  todo-image:latest 
-        imagePullPolicy: IfNotPresent #Always
-        command: ['rails', 's']
-        # resources:
-        #   requests:
-        #     cpu: "1"
-        #     memory: 200Mi
-        #   limits:
-        #     cpu: "20"
-        #     memory: 1Gi
-
-      env:
-        - name: POSTGRES_USER
-          valueFrom:
-            secretKeyRef:
-              name: todo-db-secret
-              key: todo-db-username
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: todo-db-secret
-              key: todo-db-password
-        - name: POSTGRES_HOST
-          value: todo-db-service
-        - name: RUBY_ALLOWED_HOSTS
-          value: '*'
-
-      ports:
-        - containerPort:  8080
-          name:  todo-container
-
-      restartPolicy: Always
+        app: web
+    spec:
+     containers:
+     - name: todo
+       image: 995105043624.dkr.ecr.eu-west-1.amazonaws.com/gika-container-repository:latest
+       imagePullPolicy: IfNotPresent
+       command: ["rails", "s"]
+       ports:
+       - containerPort: 8080
 
 ---
 apiVersion: v1
@@ -67,13 +38,15 @@ kind: Service
 metadata:
   name: todo-service
   namespace: default
+  annotations:
+    #alb.ingress.kubernetes.io/healthcheck-path: /index.html
 spec:
   selector:
-    app: todo-label
-  type: LoadBalancer
+    app: web
+  type: NodePort
   ports:
-  - protocol: TCP
-    # this service will expose this port
-    port: 8080
-    # Port we're targeting on the pod container
-    targetPort: 8080
+    # - protocol: TCP
+      # this service will expose this port
+      - port: 80
+      # Port we're targeting on the pod container
+        targetPort: 80
