--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -33,7 +33,7 @@ jobs:
 
           development:
             <<: *default
-            database: postgres
+            database: ${{ secrets.DB_USERNAME }}
             username: ${{ secrets.DB_USERNAME }}
             password: ${{ secrets.DB_PASSWORD }}
 
