--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,7 +27,7 @@ spec:
      containers:
      - name: todo
        image: 995105043624.dkr.ecr.eu-west-1.amazonaws.com/gika-container-repository:latest
-       imagePullPolicy: IfNotPresent
+      #  imagePullPolicy: IfNotPresent
        command: ["rails", "s"]
        ports:
        - containerPort: 8080
@@ -38,7 +38,7 @@ kind: Service
 metadata:
   name: todo
   namespace: default
-  annotations:
+  # annotations:
     #alb.ingress.kubernetes.io/healthcheck-path: /index.html
 spec:
   selector:
@@ -47,6 +47,6 @@ spec:
   ports:
     # - protocol: TCP
       # this service will expose this port
-      - port: 80
+      - port: 8080
       # Port we're targeting on the pod container
         targetPort: 8080
