--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,6 +27,16 @@ spec:
      containers:
      - name: todo
        image: 995105043624.dkr.ecr.eu-west-1.amazonaws.com/gika-container-repository:latest
+       livenessProbe:
+          httpGet:
+            path: /healthy
+            port: 8080
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
+          periodSeconds: 10
+          failureThreshold: 3
+
+
       #  imagePullPolicy: IfNotPresent
        command: ["rails", "s"]
        ports:
