--- a/ingress.yaml
+++ b/ingress.yaml
@@ -21,17 +21,17 @@ metadata:
 spec:
   ingressClassName: alb   # Ingress Class                  
   rules:
-    # - host: todo.gika.dev
+    - host: todo.gika.dev
     - http:
         paths:  
-          - path: /app1/
-            pathType: Prefix
-            backend:
-              service: 
-                name: app1-nginx-nodeport-service
-                port: 
-                  number: 80 
-          - path: /test/
+          # - path: /app1/
+          #   pathType: Prefix
+          #   backend:
+          #     service: 
+          #       name: app1-nginx-nodeport-service
+          #       port: 
+          #         number: 80 
+          - path: /
             pathType: Prefix
             backend:
               service:
